[package]
name = "code_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
recase = "0.3.0"
regex = "1.7"
image = "0.24"
strum = "0.25"
strum_macros = "0.25.3"
tree-sitter = "0.20.10"
tree-sitter-kotlin = "0.3.1"
walkdir = "2.3.3"
rayon = "1.7.0"
indicatif = { version = "0.17.5", features = ["rayon"] }
colored = "2.0.4"
string-builder = "0.2.0"
convert_case = "0.6.0"
itertools = "0.12.0"
indoc = "2.0.4"

[build-dependencies]
cc = "*"
