[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
arc-swap = "1.6.0"
async-trait = "0.1.77"
dotenv = "0.15.0"
env_logger = "0.11.0"
hex = "0.4.3"
hex-literal = "0.4.1"
hmac = "0.12.1"
indoc = "2.0.4"
itertools = "0.12.0"
once_cell = "1.19.0"
poise = "0.6.1"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha2 = "0.10.8"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["full"] }
url = "2.5.0"
