[package]
name = "icon_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
recase = "0.2.0"
